2010-03-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* pstreamWriteRecord: check pstreamptr->varlist (bug fix) [report: Kevin Sieck]
	* added operator fldcor to correlate two fields (test version)
	
2010-03-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added predefined grid t<RES>zon
	
2010-03-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* expr: added support for const/var (bug fix) [report: Youmin Chen]
	
2010-03-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added support for netCDF time bounds (bug fix) [report: Beate Geyer]

2010-03-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Released module Gridboxstat
	
2010-03-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* inputsrv: added level information (bug fix) [report: Simon Blessing]

2010-02-22  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.3
	* changed GRIB1 default packing type of spherical harmonics to complex
	* added CDO option -M to indicate that the I/O streams have missing values
	* Version 1.4.3 released

2010-02-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.2
	* Added new module Gridboxstat (testversion)
	* Version 1.4.2 released
	
2010-02-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* netCDF+packed data: check that all values are inside the valid range
	
2010-02-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remove netCDF offset/scalefactor if option -b 32 is set
	
2010-01-28  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Ensstat: don't overwrite existing files

2010-01-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Zonstat: added support for generic grids
	* Merstat: added support for generic grids

2010-01-14  Frank Kaspar <Frank.Kaspar@dwd.de>

	* import_cmsaf: added more corrections for wrong projection parameter

2010-01-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* replace: added support for time constant fields [request: Wei Wei]
	
2010-01-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
